# hidden-volume

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  DESIGN.ru.md  LICENSE-APACHE  LICENSE-MIT  README.md  README.ru.md  SECURITY.md  SECURITY.ru.md  TASKS.md  TASKS_ARCHIVE.md  deny.toml  rustfmt.toml
.github/workflows/: ci-branch.yml  ci.yml  flutter-build.yml  release.yml  windows-release-gate.yml
bindings/: README.md
bindings/python/: .gitignore  test_smoke.py
crates/hidden-volume/: Cargo.toml
crates/hidden-volume-async/: Cargo.toml
crates/hidden-volume-async/src/: lib.rs
crates/hidden-volume-async/tests/: async_basic.rs  async_streaming.rs  cancellation.rs
crates/hidden-volume-ffi/: Cargo.toml  build.rs
crates/hidden-volume-ffi/src/: lib.rs
crates/hidden-volume-ffi/tests/: ffi_smoke.rs
crates/hidden-volume-rt/: Cargo.toml
crates/hidden-volume-rt/src/: lib.rs
crates/hidden-volume/benches/: throughput.rs  timing_oracle.rs
crates/hidden-volume/examples/: messenger_lifecycle.rs
crates/hidden-volume/fuzz/: Cargo.toml  README.md
crates/hidden-volume/fuzz/fuzz_targets/: container_open.rs  decoder_family.rs  plaintext_decode.rs
crates/hidden-volume/src/: cancel.rs  error.rs  lib.rs  multi.rs
crates/hidden-volume/src/chunk/: format.rs  kind.rs  mod.rs
crates/hidden-volume/src/container/: file.rs  header.rs  mod.rs
crates/hidden-volume/src/crypto/: aead.rs  derive.rs  kdf.rs  mod.rs  rng.rs
crates/hidden-volume/src/open/: mod.rs
crates/hidden-volume/src/padding/: mod.rs
crates/hidden-volume/src/space/: checkpoint.rs  commit.rs  index.rs  integrity.rs  log.rs  log_iter.rs  mod.rs  superblock.rs  vacuum.rs
crates/hidden-volume/src/tx/: commit.rs  mod.rs
crates/hidden-volume/tests/: cancellation.rs  cli.rs  constant_time_scan.rs  crash_proptest.rs  crash_recovery.rs  erase_namespace.rs  fault_injection.rs  header_params.rs  integrity.rs  keys_cache.rs  kv_basic.rs  kv_btree.rs  locking.rs  log_basic.rs  log_pagination.rs  memory_hygiene.rs  messenger_simulation.rs  mmap_scan.rs  mmap_scan_constant_time.rs  multi_device.rs  multi_space.rs  namespace_relabel.rs  nskind.rs  padding.rs  parallel_scan.rs  parallel_scan_constant_time.rs  parser_fuzz.rs  pass11_audit.rs  password_change.rs  plaintext_hygiene.rs  properties.rs  property_full.rs  readonly.rs  repack.rs  repack_cancellation.rs  sb_replicas.rs  scrub.rs  smoke.rs  space_stats.rs  streaming_open.rs  (+3 more)
crates/hidden-volume/tests/common/: mod.rs
docs/: README.md
docs/en/contributing/: README.md  benchmarks.md  guide.md  verifying-release.md
docs/en/guide/: README.md  flutter.md  integration.md  migration.md  multi-device.md  operations.md
docs/en/reference/: README.md  api-surface.txt  ffi.md  format.md  semver.md
docs/en/security/: README.md  threat-model.md
docs/en/security/audits/: adversarial-stance.md  constant-time.md  format-fuzzing.md  fsync.md  memory.md  plaintext.md  primitive-level.md  self-audit.md  side-channel-surface.md  threat-model-challenge.md
docs/ru/contributing/: README.md  benchmarks.md  guide.md  verifying-release.md
docs/ru/guide/: README.md  flutter.md  integration.md  migration.md  multi-device.md  operations.md
docs/ru/reference/: README.md  ffi.md  format.md  semver.md
docs/ru/security/: README.md  threat-model.md
docs/ru/security/audits/: adversarial-stance.md  constant-time.md  format-fuzzing.md  fsync.md  memory.md  plaintext.md  primitive-level.md  self-audit.md  side-channel-surface.md  threat-model-challenge.md
experimental/: README.md
experimental/flutter_plugin/hidden_volume/: .gitignore  .metadata  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
experimental/flutter_plugin/hidden_volume/android/: build.gradle  build.gradle.kts  settings.gradle
experimental/flutter_plugin/hidden_volume/android/src/main/: AndroidManifest.xml
experimental/flutter_plugin/hidden_volume/android/src/main/kotlin/dev/hidden_volume/hidden_volume/: HiddenVolumePlugin.kt
experimental/flutter_plugin/hidden_volume/bench/: ffi_overhead_bench.dart  ffi_overhead_bench.py
experimental/flutter_plugin/hidden_volume/example/: README.md  pubspec.yaml
experimental/flutter_plugin/hidden_volume/example/android/app/: build.gradle.kts
experimental/flutter_plugin/hidden_volume/example/android/app/src/main/: AndroidManifest.xml
experimental/flutter_plugin/hidden_volume/example/integration_test/: app_test.dart
experimental/flutter_plugin/hidden_volume/example/ios/Runner/: Info.plist
experimental/flutter_plugin/hidden_volume/example/ios/Runner.xcodeproj/: project.pbxproj
experimental/flutter_plugin/hidden_volume/example/ios/RunnerTests/: RunnerTests.swift
experimental/flutter_plugin/hidden_volume/example/lib/: main.dart
experimental/flutter_plugin/hidden_volume/example/windows/: CMakeLists.txt
experimental/flutter_plugin/hidden_volume/example/windows/flutter/: generated_plugins.cmake
experimental/flutter_plugin/hidden_volume/example/windows/runner/: Runner.rc  main.cpp
experimental/flutter_plugin/hidden_volume/ios/: hidden_volume.podspec
experimental/flutter_plugin/hidden_volume/ios/Classes/: HiddenVolumePlugin.swift
experimental/flutter_plugin/hidden_volume/lib/: hidden_volume.dart
experimental/flutter_plugin/hidden_volume/lib/src/: async_bindings.dart  bindings.dart
experimental/flutter_plugin/hidden_volume/test/: async_test.dart  bindings_smoke_test.dart  hidden_volume_test.dart  test_dylib.dart
experimental/flutter_plugin/hidden_volume/windows/: CMakeLists.txt  hidden_volume_plugin.cpp  hidden_volume_plugin.h  hidden_volume_plugin_c_api.cpp
experimental/flutter_plugin/hidden_volume/windows/include/hidden_volume/: hidden_volume_plugin_c_api.h
experimental/flutter_plugin/hidden_volume/windows/lib/: .gitignore
experimental/flutter_plugin/hidden_volume/windows/test/: hidden_volume_plugin_test.cpp
scripts/: build-android.sh  build-ios.sh  build-windows.sh  check-docs-version-drift.sh  dump-public-api.sh  release.sh
(+2 files in other folders)
