[package]
name = "hidden-volume-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

# Empty `[workspace]` table marks this manifest as a STANDALONE
# workspace root. The parent workspace at `../../../Cargo.toml`
# excludes this path, but `cargo fuzz` invokes cargo with
# `--manifest-path .../fuzz/Cargo.toml` which still walks upward and
# finds the parent — without this marker cargo errors with "current
# package believes it's in a workspace when it's not". This is the
# fix the cargo error message itself recommends.
[workspace]

[package.metadata]
cargo-fuzz = true

# This package is intentionally NOT a workspace member — `cargo fuzz`
# manages its own build outside the parent workspace, and including it
# would force libfuzzer-sys / nightly-only deps onto stable workspace
# builds. Add `exclude = ["crates/hidden-volume/fuzz"]` to the root
# `Cargo.toml` `[workspace]` block (already done) to keep `cargo build`
# at the workspace root green on stable.

[dependencies]
# Path + version: cargo-deny requires it on path deps.
hidden-volume = { path = "..", version = "1.0.0" }
libfuzzer-sys = "0.4"
tempfile = "3.10"

# Each `[[bin]]` entry below is one fuzz target. Add new targets by
# creating `fuzz_targets/<name>.rs` and registering it here.

[[bin]]
name = "plaintext_decode"
path = "fuzz_targets/plaintext_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "container_open"
path = "fuzz_targets/container_open.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decoder_family"
path = "fuzz_targets/decoder_family.rs"
test = false
doc = false
bench = false
